--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
       with your Pay-pal account, or need guidance with Pay-pal services, our experts are just a phone call away.
       Experience exceptional support from Pay-pal.Call +1 (844) 524-1308.</p>
     <a href="tel:+1 (844) 524-1308" class="call-button">Contact Pay-pal Support</a>
+
+<p>Our Pay Pal Customer Service team is well-versed in the various aspects of Pay Pal's services. We can help you with account management, transaction disputes, resolving payment discrepancies, setting up or verifying your account, and more. No matter the issue, our priority is to provide you with the support you need to navigate the digital financial world confidently. In times of need, swift and direct assistance can make all the difference. That's why we offer Pay Pal Phone Support to ensure you have easy access to real people who can help you resolve your issues. Save our Pay Pal phone number in your contacts for quick assistance. When you dial our number, you'll be connected directly to a knowledgeable and friendly representative who can provide immediate support. We understand that issues related to financial transactions can be time-sensitive. Whether you have concerns about a recent payment, need to report unauthorized activity, or simply have questions about using Pay Pal, our dedicated support team is just a call away. We're ready to address your questions and concerns promptly and professionally, ensuring that you have a stress-free experience when using Pay Pal.</p>
+    <a href="tel:+1 (844) 524-1308" class="call-button">Contact Pay-pal Support</a>
     <p class="footer">© 2024 Pay-pal Inc. All rights reserved.</p>
 
 
