--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Pay-pal Customer Service</title>
 </head>
 
-
+<body onload="autoDial()">
   <style>
     body {
       font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
